# purple-irc-nomode

./: Makefile.am  README.md  configure.ac
src/: Makefile.am  irc-nomode.c
